force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/CSS__c.field-meta.xml
<CustomField>
    <fullName>CSS__c</fullName>
    <formula>GetFeedback_Aut__Contact__r.Account.CSS__r.FirstName &amp;&quot; &quot;&amp; GetFeedback_Aut__Contact__r.Account.CSS__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSS</label>
    <type>Text</type>
</CustomField>