force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/Current_User_is_CSS_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_CSS_on_Account__c</fullName>
    <formula>IF( GetFeedback_Aut__Contact__r.Account.CSS__c = $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is CSS on Account?</label>
    <type>Checkbox</type>
</CustomField>