force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <summarizedField>GetFeedback_Aut__Answer__c.GetFeedback_Aut__Number__c</summarizedField>
    <summaryForeignKey>GetFeedback_Aut__Answer__c.GetFeedback_Aut__Response__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>