force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_By__c</fullName>
    <label>Sent By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>